--- a/primecomp.html
+++ b/primecomp.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 <meta charset="utf-8" />
-<title>双色球综合走势</title>
+<title>双色球质合分布</title>
 <link href="./css/global.css" rel="stylesheet" type="text/css" />
 <link href="./css/chart/chart.css" rel="stylesheet" type="text/css"></link>
 <link href="./css/chart/ssq.css" rel="stylesheet" type="text/css"></link>
@@ -13,23 +13,22 @@
 <script type="text/javascript">
     var lotteryType = "SSQ";
 	var lotteryNo = "2017043";
-    var trendType = "NumTrend";
+    var trendType = "PrimeComp";
     var queryCount = 50;
 </script>
 </head>
 <body class="chartstyle">
 	<div class="chartMenu">
         <div class="clearfix newNavDiv">
-        	<a href="/" class="selected">综合走势图</a>
+        	<a href="/">综合走势图</a>
         	<a href="oddeven.html" >奇偶分布</a>
-			<a href="primecomp.html" >质合分布</a>
+			<a href="primecomp.html" class="selected">质合分布</a>
             <a href="/shuangseqiu/ssqzs/012trend/" >012路(除3余数)分布</a>
 			<a href="/shuangseqiu/ssqzs/lskj/" >历史开奖</a>
             <a href="/shuangseqiu/ssqzs/temptrend/" >号码冷热</a>
         </div>
 	</div>
-	<!--<div class="chartOper"><strong class="font_14">福彩双色球走势图表</strong></div>-->
-	<div id="chart_trend_wrapper" class="clearfix chtCont chtContssq">
+	<div id="chart_trend_wrapper" class="clearfix chtCont chtContPrimecomp">
     	<div id="chart_trend_title" class="chtTop">
 			<div class="chartH">
                 <span class="mark_lable">标记选择：</span>
@@ -38,22 +37,6 @@
                 <label class="checkTxt" for="ctrl_side_num"><input type="checkbox" id="ctrl_side_num" ><span class="bianjcolor">边号</span></label>
                 <label class="checkTxt" for="ctrl_miss_num"><input type="checkbox" id="ctrl_miss_num" ><span>遗漏</span></label>
                 <label class="checkTxt" for="ctrl_yilou_shape"><input type="checkbox" id="ctrl_yilou_shape" ><span>遗漏柱</span></label>
-                <div class="operation">
-                    <span class="qutxt">红球：</span>
-                    <p id="part_type_first" class="quNav">
-                        <a class="link_blue" href="javascript:void(0);" part="0" hidefocus>不分区</a>
-                        <a class="link_blue" href="javascript:void(0);" part="3" hidefocus>三分区</a>
-                        <a class="link_blue selected" href="javascript:void(0);" part="4" hidefocus>四分区</a>
-                        <a class="link_blue" href="javascript:void(0);" part="7" hidefocus>七分区</a>
-                    </p>
-                </div>
-                <div class="operation">
-                    <span class="qutxt">蓝球：</span>
-                    <p id="part_type_second" class="quNav">
-                        <a class="link_blue selected" href="javascript:void(0);" part="2" hidefocus>二分区</a>
-                        <a class="link_blue" href="javascript:void(0);" part="3" hidefocus>三分区</a>
-                    </p>
-                </div>
                 <div class="operation">
                     <p id="select_period" class="quNav">
                         <a class="link_blue" href="javascript:void(0);" no="20" hidefocus>近20期</a>
@@ -75,12 +58,18 @@
 	            	<div class="clearfix">
 	                	<p class="qihao">选号器</p>
 						<div class="box1 bdr2 ctrl_selecter">
-							<em class="betBall">1</em><em class="betBall">2</em><em class="betBall">3</em><em class="betBall">4</em><em class="betBall">5</em><em class="betBall">6</em><em class="betBall">7</em><em class="betBall">8</em><em class="betBall">9</em><em class="betBall">10</em><em class="betBall">11</em><em class="betBall">12</em><em class="betBall">13</em><em class="betBall">14</em><em class="betBall">15</em><em class="betBall">16</em><em class="betBall">17</em><em class="betBall">18</em><em class="betBall">19</em><em class="betBall">20</em><em class="betBall">21</em><em class="betBall">22</em><em class="betBall">23</em><em class="betBall">24</em><em class="betBall">25</em><em class="betBall">26</em><em class="betBall">27</em><em class="betBall">28</em><em class="betBall">29</em><em class="betBall">30</em><em class="betBall">31</em><em class="betBall">32</em><em class="betBall">33</em>
+							<em class="betBall">1</em><em class="betBall">2</em><em class="betBall">3</em><em class="betBall">5</em><em class="betBall">7</em><em class="betBall">11</em><em class="betBall">13</em><em class="betBall">17</em><em class="betBall">19</em><em class="betBall">23</em><em class="betBall">29</em><em class="betBall">31</em>
 						</div>
-	                	<div class="box2 ctrl_selecter">
-	                		<em class="betBall">1</em><em class="betBall">2</em><em class="betBall">3</em><em class="betBall">4</em><em class="betBall">5</em><em class="betBall">6</em><em class="betBall">7</em><em class="betBall">8</em><em class="betBall">9</em><em class="betBall">10</em><em class="betBall">11</em><em class="betBall">12</em><em class="betBall">13</em><em class="betBall">14</em><em class="betBall">15</em><em class="betBall">16</em>
-	                	</div>
-	                </div>
+                    	<div class="box3 bdr2 ctrl_selecter">
+                    		<em class="betBall">4</em><em class="betBall">6</em><em class="betBall">8</em><em class="betBall">9</em><em class="betBall">10</em><em class="betBall">12</em><em class="betBall">14</em><em class="betBall">15</em><em class="betBall">16</em><em class="betBall">18</em><em class="betBall">20</em><em class="betBall">21</em><em class="betBall">22</em><em class="betBall">24</em><em class="betBall">25</em><em class="betBall">26</em><em class="betBall">27</em><em class="betBall">28</em><em class="betBall">30</em><em class="betBall">32</em><em class="betBall">33</em>
+                    	</div>
+                		<div class="box2 bdr2 ctrl_selecter">
+                			<em class="betBall">1</em><em class="betBall">2</em><em class="betBall">3</em><em class="betBall">5</em><em class="betBall">7</em><em class="betBall">11</em><em class="betBall">13</em>
+                		</div>
+                    	<div class="box4 ctrl_selecter">
+                    		<em class="betBall">4</em><em class="betBall">6</em><em class="betBall">8</em><em class="betBall">9</em><em class="betBall">10</em><em class="betBall">12</em><em class="betBall">14</em><em class="betBall">15</em><em class="betBall">16</em>
+                    	</div>
+		            </div>
 	            </div>
 				<div class="clearfix gaopin_chart_buy">
 					<div class="bet_money_display">
@@ -108,12 +97,38 @@
 			</div>
 		</div>
         <div class="tongji" id="data_count_list"></div>
+    	<div class="chartBottom">
+	        <div class="clearfix chartTit">
+	            <p class="qihao">&nbsp;</p>
+	            <div class="box1 bdr2">
+	            	<em class="bg1">1</em><em class="bg1">2</em><em class="bg1">3</em><em class="bg1">5</em><em class="bg1">7</em><em class="bg1">11</em><em class="bg1">13</em><em class="bg1">17</em><em class="bg1">19</em><em class="bg1">23</em><em class="bg1">29</em><em class="bg1">31</em>
+	            </div>
+            	<div class="box3 bdr2">
+            		<em class="bg1">4</em><em class="bg1">6</em><em class="bg1">8</em><em class="bg1">9</em><em class="bg1">10</em><em class="bg1">12</em><em class="bg1">14</em><em class="bg1">15</em><em class="bg1">16</em><em class="bg1">18</em><em class="bg1">20</em><em class="bg1">21</em><em class="bg1">22</em><em class="bg1">24</em><em class="bg1">25</em><em class="bg1">26</em><em class="bg1">27</em><em class="bg1">28</em><em class="bg1">30</em><em class="bg1">32</em><em class="bg1">33</em>
+            	</div>
+            	<div class="box2 bdr2">
+            		<em class="bg1">1</em><em class="bg1">2</em><em class="bg1 fqborder">3</em><em class="bg1">5</em><em class="bg1">7</em><em class="bg1">11</em><em class="bg1">13</em>
+            	</div>
+            	<div class="box4 ">
+            		<em class="bg1">4</em><em class="bg1">6</em><em class="bg1">8</em><em class="bg1">9</em><em class="bg1">10</em><em class="bg1">12</em><em class="bg1">14</em><em class="bg1">15</em><em class="bg1">16</em>
+            	</div>
+	        </div>
+            <div class="chartH chartHBottom">
+				<div class="qihao">&nbsp;</div>
+				<div class="box1 bdr2">
+            		<div class="operation"><b>红球</b></div>
+          		</div>
+              	<div class="box2">
+                	<div class="operation nobdr"><b>蓝球</b></div>
+              	</div>
+        	</div>    
+       	</div>
 	    <div id="chart_notice" class="tixingBox gray6">
 			<p class="tixing"><span class="font_red">网站提醒：</span>图表数据仅供参考使用，并不作为最终投注依据，本站力求周全，但不保证绝对精准。</p>
     	</div>
 	</div>
-	<div class="helps gray6">
-        <h3 class="helpsH3">双色球[综合走势图表]使用帮助</h3>
+    <div class="helps gray6">
+        <h3 class="helpsH3">双色球[质合分布图表]使用帮助</h3>
         <p><span class="font_orange">分区：</span>本双色球走势图提供智能分区的功能，您可以选择三分区、四分区和七分区，选择分区功能后，走势图将自动按照您选择分区数将前区号码划分为多个区域，以方便您按照分区分布的方式进行选号分析。</p>
         <p><span class="font_orange">重号：</span>重号是当前期开奖号码中与上一期开奖号码相同的号。</p>
         <p><span class="font_orange">连号：</span>连号即开奖号码中号码数值相连的连号。</p>
